# Avatar_Robot

./: CMakeLists.txt  package.xml
robot_description/: package.xml
robot_description/launch/: test.launch
robot_description/rviz_config/: config (copy).rviz  config.rviz
robot_description/urdf/: avatar_robot.urdf
robot_node/: CMakeLists.txt  package.xml
robot_node/include/: Dynamixle.h
robot_node/src/: Dynamixle.cpp  driver.cpp  test.cpp
src/: Dynamixle.cpp
